syntax = "proto3";

package main;

option go_package = "./proto";


message MemberPriceList {
  int64    MemberLevelId = 1;
  int64  MemberPrice = 2;
  string    MemberLevelName = 3;
}
message ProductAttributeValueList {
  int64    ProductAttributeId = 1;
  string  AttributeValues = 2;
}
message ProductFullReductionList {
  int64  FullPrice = 1;
  int64  ReducePrice = 2;
}
message ProductLadderList {
  int32    Count = 2;
  int64  Discount = 3;
  int64  Price = 4;
}
message SkuStockList {
  string    SkuCode = 1;
  int64  Price = 2;
  int32    Stock = 3;
  int32    LowStock = 4;
  string    Pic = 5;
  int32    Sale = 6;
  int64  PromotionPrice = 7;
  int32    LockStock = 8;
  string    SpData = 9;
}
message AddProductReq {
  int64 id = 1; //
  int64 brand_id = 2; //品牌id
  int64 product_category_id = 3; //商品分类id
  int64 feight_template_id = 4; //商品运费模板id
  int64 product_attribute_category_id = 5; //商品属性分类id
  string name = 6; //商品名称
  string pic = 7; //商品图片
  string product_sn = 8; //货号
  int32 delete_status = 9; //删除状态：0->未删除；1->已删除
  int32 publish_status = 10; //上架状态：0->下架；1->上架
  int32 new_status = 11; //新品状态:0->不是新品；1->新品
  int32 recommand_status = 12; //推荐状态；0->不推荐；1->推荐
  int32 verify_status = 13; //审核状态：0->未审核；1->审核通过
  int32 sort = 14; //排序
  int32 sale = 15; //销量
  int64 price = 16; //商品价格
  int64 promotion_price = 17; //促销价格
  int32 gift_growth = 18; //赠送的成长值
  int32 gift_point = 19; //赠送的积分
  int32 use_point_limit = 20; //限制使用的积分数
  string sub_title = 21; //副标题
  string description = 22; //商品描述
  int64 original_price = 23; //市场价
  int32 stock = 24; //库存
  int32 low_stock = 25; //库存预警值
  string unit = 26; //单位
  int64 weight = 27; //商品重量，默认为克
  int32 preview_status = 28; //是否为预告商品：0->不是；1->是
  string service_ids = 29; //以逗号分割的产品服务：1->无忧退货；2->快速退款；3->免费包邮
  string keywords = 30; //搜索关键字
  string note = 31; //备注
  string album_pics = 32; //画册图片，连产品图片限制为5张，以逗号分割
  string detail_title = 33; //详情标题
  string detail_desc = 34; //详情描述
  string detail_html = 35; //产品详情网页内容
  string detail_mobile_html = 36; //移动端网页详情
  string promotion_start_time = 37; //促销开始时间
  string promotion_end_time = 38; //促销结束时间
  int32 promotion_per_limit = 39; //活动限购数量
  int32 promotion_type = 40; //促销类型：0->没有促销使用原价;1->使用促销价；2->使用会员价；3->使用阶梯价格；4->使用满减价格；5->限时购
  string brand_name = 41; //品牌名称
  string product_category_name = 42; //商品分类名称
  string product_category_id_array = 43; //商品分类id字符串
  repeated MemberPriceList      MemberPriceList = 44;
  repeated ProductAttributeValueList      ProductAttributeValueList = 45;
  repeated ProductFullReductionList      ProductFullReductionList = 46;
  repeated ProductLadderList      ProductLadderList = 47;
  repeated SkuStockList      SkuStockList = 48;
}

message AddProductResp {
  int64 productId = 1;
}

message QueryProductListReq {
  int64 current = 1;
  int64 pageSize = 2;
  string Name = 3;
  int32  VerifyStatus = 4;
  int64  ProductCategoryId = 5;
  int32       PublishStatus = 6;
  int64       BrandId = 7;
  string ProductSn = 8;
  int32 recommend_status = 9; //推荐状态；0->不推荐；1->推荐
  int32 new_status = 10; //新品状态:0->不是新品；1->新品
}

message QueryProductByIdsReq {
  repeated int64  Ids = 1;
}

message ProductListData{
  int64 id = 1; //
  int64 brand_id = 2; //品牌id
  int64 product_category_id = 3; //商品分类id
  int64 feight_template_id = 4; //商品运费模板id
  int64 product_attribute_category_id = 5; //商品属性分类id
  string name = 6; //商品名称
  string pic = 7; //商品图片
  string product_sn = 8; //货号
  int32 delete_status = 9; //删除状态：0->未删除；1->已删除
  int32 publish_status = 10; //上架状态：0->下架；1->上架
  int32 new_status = 11; //新品状态:0->不是新品；1->新品
  int32 recommand_status = 12; //推荐状态；0->不推荐；1->推荐
  int32 verify_status = 13; //审核状态：0->未审核；1->审核通过
  int32 sort = 14; //排序
  int32 sale = 15; //销量
  int64 price = 16; //商品价格
  int64 promotion_price = 17; //促销价格
  int32 gift_growth = 18; //赠送的成长值
  int32 gift_point = 19; //赠送的积分
  int32 use_point_limit = 20; //限制使用的积分数
  string sub_title = 21; //副标题
  string description = 22; //商品描述
  int64 original_price = 23; //市场价
  int32 stock = 24; //库存
  int32 low_stock = 25; //库存预警值
  string unit = 26; //单位
  int64 weight = 27; //商品重量，默认为克
  int32 preview_status = 28; //是否为预告商品：0->不是；1->是
  string service_ids = 29; //以逗号分割的产品服务：1->无忧退货；2->快速退款；3->免费包邮
  string keywords = 30; //搜索关键字
  string note = 31; //备注
  string album_pics = 32; //画册图片，连产品图片限制为5张，以逗号分割
  string detail_title = 33; //详情标题
  string detail_desc = 34; //详情描述
  string detail_html = 35; //产品详情网页内容
  string detail_mobile_html = 36; //移动端网页详情
  string promotion_start_time = 37; //促销开始时间
  string promotion_end_time = 38; //促销结束时间
  int32 promotion_per_limit = 39; //活动限购数量
  int32 promotion_type = 40; //促销类型：0->没有促销使用原价;1->使用促销价；2->使用会员价；3->使用阶梯价格；4->使用满减价格；5->限时购
  string brand_name = 41; //品牌名称
  string product_category_name = 42; //商品分类名称
  string product_category_id_array = 43; //商品分类id字符串

}

message QueryProductListResp {
  int64 total = 1;
  repeated  ProductListData list = 2;
}

message UpdateProductReq {
  int64 id = 1; //
  int64 brand_id = 2; //品牌id
  int64 product_category_id = 3; //商品分类id
  int64 feight_template_id = 4; //商品运费模板id
  int64 product_attribute_category_id = 5; //商品属性分类id
  string name = 6; //商品名称
  string pic = 7; //商品图片
  string product_sn = 8; //货号
  int32 delete_status = 9; //删除状态：0->未删除；1->已删除
  int32 publish_status = 10; //上架状态：0->下架；1->上架
  int32 new_status = 11; //新品状态:0->不是新品；1->新品
  int32 recommand_status = 12; //推荐状态；0->不推荐；1->推荐
  int32 verify_status = 13; //审核状态：0->未审核；1->审核通过
  int32 sort = 14; //排序
  int32 sale = 15; //销量
  int64 price = 16; //商品价格
  int64 promotion_price = 17; //促销价格
  int32 gift_growth = 18; //赠送的成长值
  int32 gift_point = 19; //赠送的积分
  int32 use_point_limit = 20; //限制使用的积分数
  string sub_title = 21; //副标题
  string description = 22; //商品描述
  int64 original_price = 23; //市场价
  int32 stock = 24; //库存
  int32 low_stock = 25; //库存预警值
  string unit = 26; //单位
  int64 weight = 27; //商品重量，默认为克
  int32 preview_status = 28; //是否为预告商品：0->不是；1->是
  string service_ids = 29; //以逗号分割的产品服务：1->无忧退货；2->快速退款；3->免费包邮
  string keywords = 30; //搜索关键字
  string note = 31; //备注
  string album_pics = 32; //画册图片，连产品图片限制为5张，以逗号分割
  string detail_title = 33; //详情标题
  string detail_desc = 34; //详情描述
  string detail_html = 35; //产品详情网页内容
  string detail_mobile_html = 36; //移动端网页详情
  string promotion_start_time = 37; //促销开始时间
  string promotion_end_time = 38; //促销结束时间
  int32 promotion_per_limit = 39; //活动限购数量
  int32 promotion_type = 40; //促销类型：0->没有促销使用原价;1->使用促销价；2->使用会员价；3->使用阶梯价格；4->使用满减价格；5->限时购
  string brand_name = 41; //品牌名称
  string product_category_name = 42; //商品分类名称
  string product_category_id_array = 43; //商品分类id字符串
  repeated MemberPriceList      MemberPriceList = 44;
  repeated ProductAttributeValueList      ProductAttributeValueList = 45;
  repeated ProductFullReductionList      ProductFullReductionList = 46;
  repeated ProductLadderList      ProductLadderList = 47;
  repeated SkuStockList      SkuStockList = 48;
}

message UpdateProductResp {
  string pong = 1;
}

message DeleteProductReq {
  repeated int64 ids = 1;
}

message DeleteProductResp {
  string pong = 1;
}

message QueryProductDetailByIdReq {
  int64 id = 1;
}

message BrandData {
  int64 id = 1; //
  string name = 2; //品牌名称
  string logo = 3; //品牌logo
  string big_pic = 4; //专区大图
  string description = 5; //描述
  string first_letter = 6; //首字母
  int32 sort = 7; //排序
  int32 recommend_status = 8; //推荐状态
  int32 product_count = 9; //产品数量
  int32 product_comment_count = 10; //产品评论数量
  int32 is_enabled = 11; //是否启用
  int64 create_by = 12; //创建人ID
  string create_time = 13; //创建时间
  int64 update_by = 14; //更新人ID
  string update_time = 15; //更新时间

}
message ProductAttributeDataList {
  int64 id = 1; //
  int64 product_attribute_category_id = 2; //商品属性分类id
  string name = 3; //商品属性分类id
  int32 select_type = 4; //属性选择类型：0->唯一；1->单选；2->多选
  int32 input_type = 5; //属性录入方式：0->手工录入；1->从列表中选取
  string input_list = 6; //可选值列表，以逗号隔开
  int32 sort = 7; //排序字段：最高的可以单独上传图片
  int32 filter_type = 8; //分类筛选样式：1->普通；1->颜色
  int32 search_type = 9; //检索类型；0->不需要进行检索；1->关键字检索；2->范围检索
  int32 related_status = 10; //相同属性产品是否关联；0->不关联；1->关联
  int32 hand_add_status = 11; //是否支持手动新增；0->不支持；1->支持
  int32 type = 12; //属性的类型；0->规格；1->参数

}
message ProductAttributeValueData {
  int64 id = 1; //
  int64 product_attribute_id = 2; //
  int64 product_id = 3; //
  string value = 4; //手动添加规格或参数的值，参数单值，规格有多个时以逗号隔开

}
message SkuStockData {
  int64 id = 1; //
  int64 product_id = 2; //商品id
  string sku_code = 3; //sku编码
  int64 price = 4; //价格
  int32 stock = 5; //库存
  int32 low_stock = 6; //预警库存
  string pic = 7; //展示图片
  int32 sale = 8; //销量
  int64 promotion_price = 9; //单品促销价格
  int32 lock_stock = 10; //锁定库存
  string sp_data = 11; //商品销售属性，json格式


}
message ProductLadderData {
  int64 id = 1; //
  int64 product_id = 2; //商品id
  int32 count = 3; //满足的商品数量
  int64 discount = 4; //折扣
  int64 price = 5; //折后价格

}
message ProductFullReductionData {
  int64 id = 1; //
  int64 product_id = 2; //商品id
  int64 full_price = 3; //商品满多少
  int64 reduce_price = 4; //商品减多少

}
message MemberPriceListData {
  int64 id = 1; //
  int64 product_id = 2; //商品id
  int64 member_level_id = 3; //会员等级id
  int64 member_price = 4; //会员价格
  string member_level_name = 5; //会员等级名称

}

message QueryProductDetailByIdResp{
  ProductListData       Product = 1;
  BrandData       Brand = 2;
  repeated ProductAttributeDataList       ProductAttributeList = 3;
  repeated ProductAttributeValueData       ProductAttributeValueList = 4;
  repeated SkuStockData      SkuStockList = 5;
  repeated ProductLadderData      ProductLadderList = 6;
  repeated ProductFullReductionData      ProductFullReductionList = 7;
  repeated MemberPriceListData      MemberPriceList = 8;
}

message UpdateProductStatusReq {
  repeated int64 ids = 1;
  int32 status = 2;
  string detail = 3;
  string vertifyMan = 4;
}

message UpdateProductStatusResp {
  string pong = 1;
}

message UpdateProductSortReq {
  int64 id = 1;
  int32 sort = 2;
}

service ProductService {

  rpc AddProduct(AddProductReq) returns(AddProductResp);
  //查询商品列表
  rpc QueryProductList(QueryProductListReq) returns(QueryProductListResp);
  rpc QueryProductListByIds(QueryProductByIdsReq) returns(QueryProductListResp);
  rpc UpdateProduct(UpdateProductReq) returns(UpdateProductResp);
  rpc DeleteProduct(DeleteProductReq) returns(DeleteProductResp);

  //查询商品详情
  rpc QueryProductDetailById(QueryProductDetailByIdReq) returns(QueryProductDetailByIdResp);

  //批量修改审核状态
  rpc UpdateVerifyStatus(UpdateProductStatusReq) returns(UpdateProductStatusResp);
  //批量上下架商品
  rpc UpdatePublishStatus(UpdateProductStatusReq) returns(UpdateProductStatusResp);
  //批量推荐商品
  rpc UpdateRecommendStatus(UpdateProductStatusReq) returns(UpdateProductStatusResp);
  //批量设为新品
  rpc UpdateNewStatus(UpdateProductStatusReq) returns(UpdateProductStatusResp);
  //批量修改删除状态
  rpc UpdateDeleteStatus(UpdateProductStatusReq) returns(UpdateProductStatusResp);

  //更新排序
  rpc UpdateProductSort(UpdateProductSortReq) returns(UpdateProductResp);
}

